[package]
name = "WY-backend"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1.1.13", features = [
    # postgres 사용시 변경 일단은 메모리로 db를 사용 
    # "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.135"

# Async runtime
tokio = { version = "1.40.0", features = ["full"] }

# Environment variables
dotenvy = "0.15.7"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Error handling
anyhow = "1.0.10"
thiserror = "2.0.12"

# Time
chrono = { version = "0.4.34", features = ["serde"] }

# UUID
uuid = { version = "1.14.0", features = ["v4", "serde"] }

# Password hashing
bcrypt = "0.17.0"

# JWT
jsonwebtoken = "9.0"
