[package]
name = "wy_backend"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4.5"
actix-cors = "0.7"
futures-util = "0.3"

# Database
sea-orm = { version = "1.1.13", features = [
    # postgres 사용시 변경 일단은 메모리로 db를 사용 
    "sqlx-postgres",
    # "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.135"

# Swagger/OpenAPI
utoipa = { version = "5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Async runtime
tokio = { version = "1.40.0", features = ["full"] }

# Environment variables
dotenvy = "0.15.7"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"

# Time
chrono = { version = "0.4.34", features = ["serde"] }

# UUID
uuid = { version = "1.14.0", features = ["v4", "serde"] }

# Password hashing
bcrypt = "0.17.0"

# JWT
jsonwebtoken = "9.0"

reqwest = { version = "0.12", features = ["json"] }

base64 = "0.22.1"

rand = "0.9.2"
